fixtures/frontend/milestone-2/invalid/unknown-import-module/main.aivi
use aivi.unknown (
    http
)

val provider = http
